# CoreLib

./: .gitignore  CMakeLists.txt
Include/: base.hpp
Include/Lexer/: Handler.hpp  Lexer.hpp  SourceData.hpp  Token.hpp  TokenTree.hpp  TokenType.inc
Include/Tree/: Node.hpp  Tree.hpp  TreeAllocator.hpp  TreeCreator.hpp  TreeWalker.hpp
Include/Utils/: BindPtr.hpp
Source/Lexer/: CMakeLists.txt  Handler.cpp  Lexer.cpp
Source/Test/: CMakeLists.txt  main.cpp  test.chl
